force-app/main/default/objects/Asset__c/fields/AssetType__c.field-meta.xml
<CustomField>
    <fullName>AssetType__c</fullName>
    <label>AssetType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Projectors</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
            <value>
                <fullName>iPads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>