force-app/main/default/objects/Asset__c/fields/ReservedDate__c.field-meta.xml
<CustomField>
    <fullName>ReservedDate__c</fullName>
    <label>ReservedDate</label>
    <type>DateTime</type>
</CustomField>