force-app/main/default/objects/Asset__c/recordTypes/iPads.recordType-meta.xml
<RecordType>
    <fullName>iPads</fullName>
    <active>true</active>
    <label>iPads</label>
</RecordType>