force-app/main/default/objects/Asset__c/recordTypes/Laptops.recordType-meta.xml
<RecordType>
    <fullName>Laptops</fullName>
    <active>true</active>
    <label>Laptops</label>
</RecordType>