force-app/main/default/objects/Asset__c/recordTypes/Projector.recordType-meta.xml
<RecordType>
    <fullName>Projector</fullName>
    <active>true</active>
    <label>Projector</label>
</RecordType>