force-app/main/default/objects/Asset__c/listViews/Setup_View.listView-meta.xml
<ListView>
    <fullName>Setup_View</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Setup View</label>
    <sharedTo>
        <role>InstallationRepairServices</role>
    </sharedTo>
</ListView>